--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 </head>
 <body style ="Background-color: black; color: white">
   <h1>I'm Nicolas Faché, an Electrical Engineering undergraduate student at Cal Poly, San Luis Obispo.</h1>
+  <p style="text-align:center;">
 </body>
 </html>
