--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang-"en">
 <head>
   <meta charset="UTF-8">
-  <title> WELCOME </title>
+  <title> HOME </title>
 </head>
 <body style ="Background-color: black; color: white">
-  <h1>I'm Nicolas Faché, an Electrical Engineering undergraduate student at Cal Poly, San Luis Obispo.</h1>
-  <p style="text-align:center;">Test</p>
+  <h1>WELCOME</h1>
+  <p style="text-align:center;">I'm Nicolas Faché, an Electrical Engineering undergraduate student at Cal Poly, San Luis Obispo.</p>
 </body>
 </html>
