--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title> HOME </title>
 </head>
 <body style ="Background-color: black; color: white">
-  <h1>WELCOME</h1>
-  <p style="text-align:center;">I'm Nicolas Faché, an Electrical Engineering undergraduate student at Cal Poly, San Luis Obispo.</p>
+  <h1 style="text-align:center;color:orange;font-size:48px;">WELCOME</h1>
+  <p style="text-align:center;font-size:24px;">I'm Nicolas Faché, an Electrical Engineering undergraduate student at Cal Poly, San Luis Obispo.</p>
 </body>
 </html>
