--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8">
   <title> HOME </title>
 </head>
-<body style ="Background-color: black; color: white">
+<body style ="Background-color: #545353; color: white">
   <h1 style="text-align:center;color:orange;font-size:48px;">WELCOME</h1>
   <p style="text-align:center;font-size:24px;">I'm Nicolas Faché, an Electrical Engineering undergraduate student at Cal Poly, San Luis Obispo.</p>
+  <p style="text-align:center;font-size:24px;">Here on some projects that I am working on myself, my experience and knowledge, and my contact information!</p>
 </body>
 </html>
