--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <title> HOME </title>
 </head>
-<body style ="vertical-align: middle; Background-color: #333231; color: white;font-family:"Helvetica Neue", Helvetica;">
+<body style ="vertical-align: middle; Background-color: #333231; color: white;font-family:Helvetica;">
   <h1 style="text-align:center;color:orange;font-size:48px;">WELCOME</h1>
-  <p style="text-align:center;font-size:24px;font-family:"Helvetica Neue", Helvetica;">I'm Nicolas Faché, an Electrical Engineering undergraduate student at Cal Poly, San Luis Obispo.</p>
-  <p style="text-align:center;font-size:24px;font-family:"Helvetica Neue", Helvetica;">Here on some projects that I am working on myself, my experience and knowledge, and my contact information!</p>
+  <p style="text-align:center;font-size:24px;font-family:Helvetica;">I'm Nicolas Faché, an Electrical Engineering undergraduate student at Cal Poly, San Luis Obispo.</p>
+  <p style="text-align:center;font-size:24px;font-family:Helvetica;">Here on some projects that I am working on myself, my experience and knowledge, and my contact information!</p>
 </body>
 </html>
