--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title> HOME </title>
 </head>
-<body style ="vertical-align: middle; Background-color: #2b2a2a; color: white;font-family:Helvetica;">
+<body style ="border-top-width: 10px;vertical-align: middle; Background-color: #2b2a2a; color: white;font-family:Helvetica;">
   <h1 style="text-align:center;color:orange;font-size:56px;">WELCOME</h1>
   <p style="text-align:center;font-size:30px;font-family:Helvetica;">I'm Nicolas Faché, an Electrical Engineering</br> undergraduate student at Cal Poly, San Luis Obispo.</br>Here on some projects that I am working on myself, my experience</br> and knowledge, and my contact information!</p>
 </body>
