--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title> HOME </title>
 </head>
 <body style ="border-top-width: 1000px;vertical-align: middle; Background-color: #2b2a2a; color: white;font-family:Helvetica;">
-  <h1 style="text-align:center;color:#bf7205;font-size:56px;"></br></br></br>WELCOME</h1>
+  <h1 style="text-align:center;color:#bf7205;font-size:56px;"></br></br>WELCOME</h1>
   <p style="text-align:center;font-size:30px;font-family:Helvetica;">I'm Nicolas Faché, an Electrical Engineering</br> undergraduate student at Cal Poly, San Luis Obispo.</br>Here on some projects that I am working on, my in-class</br>experience and knowledge, and my contact information!</p>
 </body>
 </html>
