--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <body style ="border-top-width: 1000px;vertical-align: middle; Background-color: #2b2a2a; color: white;font-family:Helvetica;">
   <h1 style="text-align:center;color:#f08f07;font-size:56px;"></br></br>WELCOME</h1>
   <p style="text-align:center;font-size:30px;font-family:Helvetica;">I'm Nicolas Faché, an Electrical Engineering</br> undergraduate student at Cal Poly, San Luis Obispo.</br>Here on some projects that I am working on, my in-class</br>experience and knowledge, and my contact information!</p>
-  <div class="button_a" align="left"><a class="example_c" href="add-website-here" target="_blank" rel="nofollow noopener">Projects</a></div>
-  <div class="button_b" align="center"><a class="example_c" href="add-website-here" target="_blank" rel="nofollow noopener">Experience</a></div>
-  <div class="button_c" align="right"><a class="example_c" href="add-website-here" target="_blank" rel="nofollow noopener">Contact</a></div>
+  <div class="button_a" align="left"><a class="example_c" href="nicolasfache.github.io/projects.html" target="_blank" rel="nofollow noopener">Projects</a></div>
+  <div class="button_b" align="center"><a class="example_c" href="nicolasfache.github.io/experience.html" target="_blank" rel="nofollow noopener">Experience</a></div>
+  <div class="button_c" align="right"><a class="example_c" href="nicolasfache.github.io/contact.html" target="_blank" rel="nofollow noopener">Contact</a></div>
 </body>
 </html>
