--- a/projects.html
+++ b/projects.html
@@ -3,5 +3,5 @@
 <head>
   <title>PROJECTS</title>
   </head>
-  <body>projects work</body>
+  <body style ="Background-Color:#2b2a2a;">projects work</body>
 </html>
