--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <style>
   .buttons button {
     background-color: #f28c0f;
-    border: 1px solid orange;
+    border: 1px solid black;
     color: white;
     cursor: pointer;
     float:left;
