--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     cursor: pointer;
     float:left;
   }
+  .buttonsSubmit {
+    margin: 20px;
+  }
   .buttons:after {
     content: "";
     clear: both;
