--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body style ="border-top-width: 1000px;vertical-align: middle; Background-color: #2b2a2a; color: white;font-family:Helvetica;">
   <h1 style="text-align:center;color:#f08f07;font-size:56px;"></br></br>WELCOME</h1>
   <p style="text-align:center;font-size:30px;font-family:Helvetica;">I'm Nicolas Faché, an Electrical Engineering</br> undergraduate student at Cal Poly, San Luis Obispo.</br>Here on some projects that I am working on, my in-class</br>experience and knowledge, and my contact information!</p>
-  <style ="align:center;">
+  <style>
 
   .buttons button {
     background-color: #f28c0f;
@@ -32,8 +32,8 @@
   }
   </style>
   <div class="buttons">
-    <button>PROJECTS</button>
-    <button>EXPERIENCE</button>
+    <button>PROJECTS&nbsp;&nbsp;&nbsp;</button>
+    <button>EXPERIENCE&nbsp;&nbsp;&nbsp;</button>
     <button>CONTACT</button>
   </div>
 </body>
