--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
   }
   </style>
   <div class="buttons">
-    <button>PROJECTS&nbsp;&nbsp;&nbsp;</button>
-    <button>EXPERIENCE&nbsp;&nbsp;&nbsp;</button>
+    <button>PROJECTS</button>
+    &nbsp;&nbsp;&nbsp;
+    <button>EXPERIENCE</button>
+    &nbsp;&nbsp;&nbsp;
     <button>CONTACT</button>
   </div>
 </body>
