--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
   </style>
   <div class="buttons">
     <button>href="https://nicolasfache.github.io/projects.html" PROJECTS</button>
-    &nbsp;&nbsp;&nbsp;
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button>EXPERIENCE</button>
-    &nbsp;&nbsp;&nbsp;
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button>CONTACT</button>
   </div>
 </body>
