--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   }
   </style>
   <div class="buttons">
-    <button>href="https://nicolasfache.github.io/projects.html" PROJECTS</button>
+    <button>PROJECTS</button>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button>EXPERIENCE</button>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
