--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
   <div class="buttons">
     <button align="center" href="https://nicolasfache.github.io/projects.html">PROJECTS</button>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <button>EXPERIENCE</button>
+    <button align="center">EXPERIENCE</button>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <button>CONTACT</button>
+    <button align="center">CONTACT</button>
   </div>
 </body>
 </html>
