--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
     background-color:#d97c0a;
   }
   </style>
-  <div class="buttons">
-    <button align="center" href="https://nicolasfache.github.io/projects.html">PROJECTS</button>
+  <div class="buttons" align="center">
+    <button href="https://nicolasfache.github.io/projects.html">PROJECTS</button>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <button align="center">EXPERIENCE</button>
+    <button>EXPERIENCE</button>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <button align="center">CONTACT</button>
+    <button>CONTACT</button>
   </div>
 </body>
 </html>
