--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     background-color:#d97c0a;
   }
   </style>
-  <div class="buttons" align="center">
+  <div class="buttons" button-align="center">
     <button href="https://nicolasfache.github.io/projects.html">PROJECTS</button>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button>EXPERIENCE</button>
