--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
   <h1 style="text-align:center;color:#f08f07;font-size:56px;"></br></br>WELCOME</h1>
   <p style="text-align:center;font-size:30px;font-family:Helvetica;">I'm Nicolas Faché, an Electrical Engineering</br> undergraduate student at Cal Poly, San Luis Obispo.</br>Here on some projects that I am working on, my in-class</br>experience and knowledge, and my contact information!</p>
   <style>
-
+  .horizonal-center {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+  }
   .buttons button {
     background-color: #f28c0f;
     border: 1px solid black;
@@ -31,7 +35,7 @@
     background-color:#d97c0a;
   }
   </style>
-  <div class="buttons" button-align="center">
+  <div class="buttons">
     <button href="https://nicolasfache.github.io/projects.html">PROJECTS</button>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button>EXPERIENCE</button>
