--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <style>
   .horizonal-center {
     margin: 0;
-    position: absolute;
+    align-items: center;
     top: 50%;
   }
   .buttons button {
