--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
   }
   </style>
   <div class="buttons">
+    text-align:center;
     <button href="https://nicolasfache.github.io/projects.html">PROJECTS</button>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button>EXPERIENCE</button>
