--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
     background-color:#d97c0a;
   }
   </style>
-  <div class="buttons">
-    text-align:center;
+  <div class="buttons" text-align="center">
     <button href="https://nicolasfache.github.io/projects.html">PROJECTS</button>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button>EXPERIENCE</button>
