--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
   .buttons button:hover {
     background-color:#d97c0a;
   }
+  .buttons {
+    text-align: center;
+  }
+  .button {
+    position: absolute;
+    top: 50%
+  }
   </style>
   <div class="buttons" margin:auto>
     <button href="https://nicolasfache.github.io/projects.html">PROJECTS</button>
