--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   }
   </style>
   <div class="buttons" margin:auto>
-    <button href="https://nicolasfache.github.io/projects.html">PROJECTS</button>
+    <button <a href="https://nicolasfache.github.io/projects.html">>PROJECTS</button>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button>EXPERIENCE</button>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
