--- a/index.html
+++ b/index.html
@@ -8,11 +8,6 @@
   <h1 style="text-align:center;color:#f08f07;font-size:56px;"></br></br>WELCOME</h1>
   <p style="text-align:center;font-size:30px;font-family:Helvetica;">I'm Nicolas Faché, an Electrical Engineering</br> undergraduate student at Cal Poly, San Luis Obispo.</br>Here on some projects that I am working on, my in-class</br>experience and knowledge, and my contact information!</p>
   <style>
-  /* .horizonal-center {
-    margin: 0;
-    align-items: center;
-    top: 50%;
-  } */
   .buttons button {
     background-color: #f28c0f;
     border: 1px solid black;
@@ -43,8 +38,7 @@
   }
   </style>
   <div class="buttons" margin:auto>
-    <button>PROJECTS</button>
-    <a href="https://nicolasfache.github.io/projects.html">
+    <button>PROJECTS<a href="https://nicolasfache.github.io/projects.html"></button>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button>EXPERIENCE</button>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
