--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   }
   </style>
   <div class="buttons" margin:auto>
-    <button>PROJECTS<a href="https://nicolasfache.github.io/projects.html"></button>
+    <button text-align="center">PROJECTS</button>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button>EXPERIENCE</button>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
