--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     top: 50%
   }
   </style>
-  <div class="buttons" margin:auto>
-    <button text-align="center">PROJECTS</button>
+  <div class="buttons" text-align:center>
+    <button>PROJECTS</button>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button>EXPERIENCE</button>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
