--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
     top: 50%
   }
   </style>
-  <div class="buttons" text-align:center>
-    <button>PROJECTS</button>
+  <div class="buttons">
+    <button style="text-align:center;">PROJECTS</button>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <button>EXPERIENCE</button>
+    <button style="text-align:center;">EXPERIENCE</button>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <button>CONTACT</button>
+    <button style="text-align:center;">CONTACT</button>
   </div>
 </body>
 </html>
