--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     border-right:none;
   }
   .buttons button:hover {
-    background-color:#d97c0a;
+    background-color:#cc750a;
   }
   .buttons {
     text-align: center;
