--- a/index.html
+++ b/index.html
@@ -37,12 +37,13 @@
     top: 50%
   }
   </style>
+  <body style="text-align:center;font-family:Helvetica;"
   <div class="buttons">
-    <button style="text-align:center;">PROJECTS</button>
+    <button>PROJECTS</button>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <button style="text-align:center;">EXPERIENCE</button>
+    <button>EXPERIENCE</button>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <button style="text-align:center;">CONTACT</button>
+    <button>CONTACT</button>
   </div>
 </body>
 </html>
