--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title> HOME </title>
 </head>
-<body style ="border-top-width: 1000px;vertical-align: middle; Background-color: #2b2a2a; color: white;font-family:Helvetica;">
+<body style ="border-top-width: 1000px;vertical-align: middle;text-align: center;Background-color: #2b2a2a; color: white;font-family:Helvetica;">
   <h1 style="text-align:center;color:#f08f07;font-size:56px;"></br></br>WELCOME</h1>
   <p style="text-align:center;font-size:30px;font-family:Helvetica;">I'm Nicolas Faché, an Electrical Engineering</br> undergraduate student at Cal Poly, San Luis Obispo.</br>Here on some projects that I am working on, my in-class</br>experience and knowledge, and my contact information!</p>
   <style>
@@ -37,14 +37,10 @@
     top: 50%
   }
   </style>
-  <body style="text-align:center;font-family:Helvetica;"
   <div class="buttons">
     <button>PROJECTS</button>
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button>EXPERIENCE</button>
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button>CONTACT</button>
   </div>
-</body>
 </body>
 </html>
