--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     color: white;
     cursor: pointer;
     float:left;
+    text-align: center;
+    border-radius: 16px;
   }
   .buttonsSubmit {
     margin: 20px;
