--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     text-align: center;
     display:inline-block;
     border-radius: 16px;
+    box-shadow: none;
   }
   .buttonsSubmit {
     margin: 20px;
