--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <style>
   .buttons button {
     background-color: #f28c0f;
-    border: 2px solid black;
+    border: 1px solid black;
     color: white;
     cursor: pointer;
     float:left;
@@ -18,6 +18,9 @@
     display:inline-block;
     border-radius: 16px;
     box-shadow: none;
+  }
+  input:focus {
+    outline: none;
   }
   .buttonsSubmit {
     margin: 20px;
