--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <h1 style="text-align:center;color:#f08f07;font-size:56px;"></br></br>WELCOME</h1>
   <p style="text-align:center;font-size:30px;font-family:Helvetica;">I'm Nicolas Faché, an Electrical Engineering</br> undergraduate student at Cal Poly, San Luis Obispo.</br>Here on some projects that I am working on, my in-class</br>experience and knowledge, and my contact information!</p>
   <style>
-  .buttons outline: none;
+  button {
+    outline: none;
+  } 
   .buttons button {
     background-color: #f28c0f;
     border: 1px solid black;
