--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title> HOME </title>
 </head>
 <body style ="border-top-width: 1000px;vertical-align: middle; text-align: center; Background-color: #2b2a2a; color: white;font-family:Helvetica;">
-  <h1 style="text-align:center;color:#f08f07;font-size:56px;"></br></br>WELCOME3</h1>
+  <h1 style="text-align:center;color:#f08f07;font-size:56px;"></br></br>WELCOME4</h1>
   <p style="text-align:center;font-size:30px;font-family:Helvetica;">I'm Nicolas Faché, an Electrical Engineering</br> undergraduate student at Cal Poly, San Luis Obispo.</br>Here on some projects that I am working on, my in-class</br>experience and knowledge, and my contact information!</p>
   <style>
   button {
@@ -19,7 +19,7 @@
     float:left;
     text-align: center;
     display:inline-block;
-    border-radius: 40px; //increase radius
+    border-radius: 40px;
     box-shadow: none;
   }
   .buttonsSubmit {
@@ -44,7 +44,7 @@
     top: 50%
   }
   </style>
-  <div class="buttons">
+  <div class="buttons" style="width: 40px; height: 40px; text-align: center;">
     <button>PROJECTS</button>
     <button>EXPERIENCE</button>
     <button>CONTACT</button>
