--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <h1 style="text-align:center;color:#f08f07;font-size:56px;"></br></br>WELCOME7</h1>
   <p style="text-align:center;font-size:30px;font-family:Helvetica;">I'm Nicolas Faché, an Electrical Engineering</br> undergraduate student at Cal Poly, San Luis Obispo.</br>Here on some projects that I am working on, my in-class</br>experience and knowledge, and my contact information!</p>
 </body>
-<body style="text-align: center;"
+<body style="text-align: center;">
   <style>
   button {
     outline: none;
