--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
   }
   </style>
   <div class="buttons" style="width: 40px; height: 40px; margin-left:auto; margin-right:auto;">
-    <button>PROJECTS</button>
-    <button>EXPERIENCE</button>
+    <button>PROJECTS</button></br>
+    <button>EXPERIENCE</button></br>
     <button>CONTACT</button>
   </div>
 </body>
