--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title> HOME | Nicolas Faché</title>
 </head>
 <body style ="border-top-width: 1000px;vertical-align: middle; text-align: center; Background-color: #2b2a2a; color: white;font-family:Helvetica;">
-  <h1 style="text-align:center;color:#f08f07;font-size:82px;"></br>WELCOME25</h1>
+  <h1 style="text-align:center;color:#f08f07;font-size:82px;"></br>WELCOME26</h1>
   <p style="text-align:center;font-size:50px;font-family:Helvetica;">I'm Nicolas Faché, an Electrical Engineering</br> undergraduate student at Cal Poly, San Luis Obispo.</br>Here on some projects that I am working on, my in-class</br>experience and knowledge, and my contact information!</p>
 </body>
 <body style="text-align: center;">
@@ -14,9 +14,10 @@
   button {
     outline: none;
   }
-  .buttons button {
+  .btn {
     background-color: #f28c0f;
     border: 1px solid black;
+    font-size: 40px;
     color: white;
     cursor: pointer;
     float:left;
@@ -52,10 +53,10 @@
     height: 40px;
   }
   </style>
-  <div class="buttons" style="width: 15%; height: 80px; margin-left:auto; margin-right:auto; font-size:34px;">
-    <button>PROJECTS</button>
-    <button>EXPERIENCE</button>
-    <button>CONTACT</button>
+  <div class="buttons" style="width: 15%; height: 80px; margin-left:auto; margin-right:auto;">
+    <button class="btn projects">PROJECTS</button>
+    <button class="btn experience">EXPERIENCE</button>
+    <button class="btn contact">CONTACT</button>
   </div>
 </body>
 </html>
