--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title> HOME | Nicolas Faché</title>
 </head>
 <body style ="border-top-width: 1000px;vertical-align: middle; text-align: center; Background-color: #2b2a2a; color: white;font-family:Helvetica;">
-  <h1 style="text-align:center;color:#f08f07;font-size:82px;"></br>WELCOME7</h1>
+  <h1 style="text-align:center;color:#f08f07;font-size:82px;"></br>WELCOME8</h1>
   <p style="text-align:center;font-size:50px;font-family:Helvetica;">I'm Nicolas Faché, an Electrical Engineering</br> undergraduate student at Cal Poly, San Luis Obispo.</br>Here on some projects that I am working on, my in-class</br>experience and knowledge, and my contact information!</p>
 </body>
 <body style="text-align: center;">
@@ -54,9 +54,9 @@
   }
   </style>
   <div class="buttons" style="width: 10%; height: 80px; margin-left:auto; margin-right:auto;">
-    <button class="btn projects"><a href="https://nicolasfache.github.io/projects.html"><p style="color: solid white;"> PROJECTS </a></button>
-    <button class="btn experience"><a href="https://nicolasfache.github.io/projects.html"><p style="color: solid white;">EXPERIENCE</button>
-    <button class="btn contact"><a href="https://nicolasfache.github.io/projects.html"><p style="color: solid white;">  CONTACT  </button>
+    <button class="btn projects"><a href="https://nicolasfache.github.io/projects.html"><p style="color: solid white; font-size: 30px;"> PROJECTS </a></button>
+    <button class="btn experience"><a href="https://nicolasfache.github.io/projects.html"><p style="color: solid white; font-size: 30px;">EXPERIENCE</button>
+    <button class="btn contact"><a href="https://nicolasfache.github.io/projects.html"><p style="color: solid white; font-size: 30px;">  CONTACT  </button>
   </div>
 </body>
 </html>
